riferimenti.output
Simboli nonterminali inutili

   leggeRegionale
   regolamentoRegionale


Simboli terminali inutilizzati

   PAROLA


Regole inutili

  129 leggeRegionale: LEGGE regionaleConnettivo PAROLA_REGIONE

  130 regolamentoRegionale: REGOLAMENTO regionaleConnettivo PAROLA_REGIONE


State 2 conflicts: 1 shift/reduce
State 4 conflicts: 4 shift/reduce
State 5 conflicts: 4 shift/reduce
State 6 conflicts: 4 shift/reduce
State 7 conflicts: 4 shift/reduce
State 8 conflicts: 4 shift/reduce
State 9 conflicts: 4 shift/reduce
State 10 conflicts: 4 shift/reduce
State 11 conflicts: 4 shift/reduce
State 12 conflicts: 4 shift/reduce
State 13 conflicts: 4 shift/reduce
State 14 conflicts: 4 shift/reduce
State 15 conflicts: 4 shift/reduce
State 75 conflicts: 5 shift/reduce, 3 reduce/reduce
State 76 conflicts: 5 shift/reduce, 3 reduce/reduce
State 86 conflicts: 2 shift/reduce
State 88 conflicts: 2 shift/reduce
State 109 conflicts: 3 reduce/reduce
State 115 conflicts: 3 shift/reduce
State 116 conflicts: 2 shift/reduce
State 120 conflicts: 2 shift/reduce
State 135 conflicts: 1 shift/reduce, 43 reduce/reduce
State 145 conflicts: 1 shift/reduce
State 157 conflicts: 2 shift/reduce
State 168 conflicts: 3 shift/reduce
State 172 conflicts: 1 shift/reduce, 43 reduce/reduce


Grammatica

    0 $accept: documento $end

    1 documento: documento blocco
    2          | error

    3 blocco: riferimento
    4       | BREAK

    5 riferimento: normativo
    6            | costituzione
    7            | codice
    8            | comunitario

    9 costituzione: suddivisione COSTITUZIONE

   10 normativo: suddivisioneOpz normativoTipo estremi

   11 normativoTipo: leggeOrdinaria
   12              | decretoPresidenteRepubblica
   13              | decretoPresidenteConsiglioMinistri
   14              | direttivaPresidenteConsiglioMinistri
   15              | ordinanzaPresidenteConsiglioMinistri
   16              | regio
   17              | regionale

   18 decretoPresidenteRepubblica: DECRETO_PRESIDENTE_REPUBBLICA

   19 decretoPresidenteConsiglioMinistri: DECRETO_PRESIDENTE_CONSIGLIO_MINISTRI

   20 direttivaPresidenteConsiglioMinistri: DIRETTIVA_PRESIDENTE_CONSIGLIO_MINISTRI

   21 ordinanzaPresidenteConsiglioMinistri: ORDINANZA_PRESIDENTE_CONSIGLIO_MINISTRI

   22 leggeOrdinaria: LEGGE_COSTITUZIONALE
   23               | LEGGE
   24               | DECRETO_LEGGE
   25               | DECRETO_LEGISLATIVO

   26 regio: REGIO_DECRETO
   27      | REGIO_DECRETO_LEGGE
   28      | REGIO_DECRETO_LEGISLATIVO

   29 regionale: regionaleTipo regionaleConnettivo regioneParola regioneNome

   30 regioneParola: PAROLA_REGIONE
   31              | /* vuoto */

   32 regioneNome: REGIONE
   33            | /* vuoto */

   34 regionaleTipo: LEGGE_REGIONALE
   35              | REGOLAMENTO_REGIONALE

   36 regionaleConnettivo: DEL
   37                    | DELL
   38                    | DELLA
   39                    | /* vuoto */

   40 codice: suddivisioneOpz codiceTipo

   41 codiceTipo: CODICE_CIVILE
   42           | CODICE_PROCEDURA_CIVILE
   43           | CODICE_PENALE
   44           | CODICE_PROCEDURA_PENALE

   45 comunitario: suddivisioneOpz comunitarioTipo estremiConnettivo dataOpz

   46 comunitarioTipo: comunitarioDirettiva
   47                | comunitarioDecisione
   48                | comunitarioRegolamento

   49 comunitarioNumero: UE_NUM

   50 comunitarioEmanante: comunitarioConnettivo comunitarioOrgano comunitarioEmananteAltri

   51 comunitarioConnettivo: DEL
   52                      | DELLA
   53                      | /* vuoto */

   54 comunitarioOrgano: PARLAMENTO
   55                  | CONSIGLIO
   56                  | COMMISSIONE
   57                  | /* vuoto */

   58 comunitarioEmananteAltri: comunitarioAltri comunitarioConnettivo comunitarioOrgano comunitarioEmananteAltri
   59                         | /* vuoto */

   60 comunitarioAltri: E
   61                 | /* vuoto */

   62 comunitarioDirettiva: DIRETTIVA comunitarioEstremi comunitarioEmanante comunitarioDenominazione
   63                     | DIRETTIVA comunitarioEmanante comunitarioDenominazione comunitarioEstremi

   64 comunitarioDenominazione: UE_DEN
   65                         | /* vuoto */

   66 comunitarioEstremi: comunitarioNumero
   67                   | estremi

   68 comunitarioDecisione: DECISIONE comunitarioEstremi comunitarioEmanante comunitarioDenominazione
   69                     | DECISIONE comunitarioEmanante comunitarioDenominazione comunitarioEstremi

   70 comunitarioRegolamento: REGOLAMENTO comunitarioDenominazione comunitarioEstremi

   71 suddivisioneOpz: suddivisione
   72                | /* vuoto */

   73 suddivisione: suddivisioni connettivoAtto

   74 suddivisioni: suddivisionePartizioneSupArt
   75             | suddivisioneArticolo

   76 connettivoAtto: CITATO
   77               | DEL
   78               | DELL
   79               | DELLA
   80               | /* vuoto */

   81 suddivisioneConnettivo: connettivoAtto

   82 suddivisionePartizioneSupArtOpz: suddivisionePartizioneSupArt
   83                                | /* vuoto */

   84 suddivisionePartizioneSupArt: suddivisioneLibro
   85                             | suddivisioneParte
   86                             | suddivisioneTitolo
   87                             | suddivisioneCapo
   88                             | suddivisioneSezione

   89 suddivisionePartizioneInfArtOpz: suddivisionePartizioneInfArt
   90                                | /* vuoto */

   91 suddivisionePartizioneInfArt: suddivisioneComma
   92                             | suddivisioneCapoverso
   93                             | suddivisioneLettera
   94                             | suddivisioneNumero
   95                             | suddivisionePeriodo
   96                             | suddivisioneParagrafo

   97 suddivisioneLibro: LIBRO suddivisioneConnettivo suddivisionePartizioneSupArtOpz

   98 suddivisioneParte: PARTE suddivisioneConnettivo suddivisionePartizioneSupArtOpz

   99 suddivisioneTitolo: TITOLO suddivisioneConnettivo suddivisionePartizioneSupArtOpz

  100 suddivisioneCapo: CAPO suddivisioneConnettivo suddivisionePartizioneSupArtOpz

  101 suddivisioneSezione: SEZIONE suddivisioneConnettivo suddivisionePartizioneSupArtOpz

  102 suddivisioneArticolo: ARTICOLO suddivisioneConnettivo suddivisionePartizioneInfArtOpz
  103                     | suddivisionePartizioneInfArtOpz suddivisioneConnettivo ARTICOLO

  104 suddivisioneComma: COMMA suddivisioneConnettivo suddivisionePartizioneInfArtOpz

  105 suddivisioneCapoverso: CAPOVERSO suddivisioneConnettivo suddivisionePartizioneInfArtOpz

  106 suddivisioneLettera: LETTERA suddivisioneConnettivo suddivisionePartizioneInfArtOpz

  107 suddivisioneNumero: NUMERO suddivisioneConnettivo suddivisionePartizioneInfArtOpz

  108 suddivisioneParagrafo: PARAGRAFO suddivisioneConnettivo suddivisionePartizioneInfArtOpz

  109 suddivisionePeriodo: PERIODO suddivisioneConnettivo suddivisionePartizioneInfArtOpz

  110 estremi: estremiConnettivo estremiTipo

  111 estremiTipo: estremiEstesi
  112            | estremiAbbreviati

  113 estremiEstesi: data estremiNumero
  114              | estremiNumero estremiConnettivo data
  115              | data

  116 estremiAbbreviati: estremiNumero BARRA NUMERO_CARDINALE
  117                  | estremiNumero estremiConnettivo NUMERO_CARDINALE
  118                  | NUMERO_CARDINALE NUMERO

  119 estremiNumero: NUMERO
  120              | NUMERO_CARDINALE

  121 estremiConnettivo: DEL
  122                  | DELL
  123                  | IN_DATA
  124                  | /* vuoto */

  125 dataOpz: data
  126        | /* vuoto */

  127 data: dataTipo

  128 dataTipo: DATA_GG_MM_AAAA


Simboli terminali e regole in cui appaiono

$end (0) 0
error (256) 2
LIBRO (258) 97
PARTE (259) 98
TITOLO (260) 99
CAPO (261) 100
SEZIONE (262) 101
ARTICOLO (263) 102 103
COMMA (264) 104
CAPOVERSO (265) 105
LETTERA (266) 106
NUMERO (267) 107 118 119
PARAGRAFO (268) 108
PERIODO (269) 109
COSTITUZIONE (270) 9
DECRETO_PRESIDENTE_REPUBBLICA (271) 18
DECRETO_PRESIDENTE_CONSIGLIO_MINISTRI (272) 19
DIRETTIVA_PRESIDENTE_CONSIGLIO_MINISTRI (273) 20
ORDINANZA_PRESIDENTE_CONSIGLIO_MINISTRI (274) 21
LEGGE_COSTITUZIONALE (275) 22
LEGGE (276) 23
DECRETO_LEGGE (277) 24
DECRETO_LEGISLATIVO (278) 25
REGIO_DECRETO (279) 26
REGIO_DECRETO_LEGGE (280) 27
REGIO_DECRETO_LEGISLATIVO (281) 28
CODICE_CIVILE (282) 41
CODICE_PROCEDURA_CIVILE (283) 42
CODICE_PENALE (284) 43
CODICE_PROCEDURA_PENALE (285) 44
LEGGE_REGIONALE (286) 34
REGOLAMENTO_REGIONALE (287) 35
REGIONE (288) 32
PAROLA_REGIONE (289) 30
UE_NUM (290) 49
UE_DEN (291) 64
PARLAMENTO (292) 54
CONSIGLIO (293) 55
COMMISSIONE (294) 56
DIRETTIVA (295) 62 63
DECISIONE (296) 68 69
REGOLAMENTO (297) 70
DATA_GG_MM_AAAA (298) 128
NUMERO_CARDINALE (299) 116 117 118 120
CITATO (300) 76
DEL (301) 36 51 77 121
DELL (302) 37 78 122
DELLA (303) 38 52 79
E (304) 60
IN_DATA (305) 123
BARRA (306) 116
PAROLA (307)
BREAK (308) 4


Simboli nonterminali e regole in cui appaiono

$accept (54)
    nel primo membro: 0
documento (55)
    nel primo membro: 1 2, nel secondo membro: 0 1
blocco (56)
    nel primo membro: 3 4, nel secondo membro: 1
riferimento (57)
    nel primo membro: 5 6 7 8, nel secondo membro: 3
costituzione (58)
    nel primo membro: 9, nel secondo membro: 6
normativo (59)
    nel primo membro: 10, nel secondo membro: 5
normativoTipo (60)
    nel primo membro: 11 12 13 14 15 16 17, nel secondo membro: 10
decretoPresidenteRepubblica (61)
    nel primo membro: 18, nel secondo membro: 12
decretoPresidenteConsiglioMinistri (62)
    nel primo membro: 19, nel secondo membro: 13
direttivaPresidenteConsiglioMinistri (63)
    nel primo membro: 20, nel secondo membro: 14
ordinanzaPresidenteConsiglioMinistri (64)
    nel primo membro: 21, nel secondo membro: 15
leggeOrdinaria (65)
    nel primo membro: 22 23 24 25, nel secondo membro: 11
regio (66)
    nel primo membro: 26 27 28, nel secondo membro: 16
regionale (67)
    nel primo membro: 29, nel secondo membro: 17
regioneParola (68)
    nel primo membro: 30 31, nel secondo membro: 29
regioneNome (69)
    nel primo membro: 32 33, nel secondo membro: 29
regionaleTipo (70)
    nel primo membro: 34 35, nel secondo membro: 29
regionaleConnettivo (71)
    nel primo membro: 36 37 38 39, nel secondo membro: 29
codice (72)
    nel primo membro: 40, nel secondo membro: 7
codiceTipo (73)
    nel primo membro: 41 42 43 44, nel secondo membro: 40
comunitario (74)
    nel primo membro: 45, nel secondo membro: 8
comunitarioTipo (75)
    nel primo membro: 46 47 48, nel secondo membro: 45
comunitarioNumero (76)
    nel primo membro: 49, nel secondo membro: 66
comunitarioEmanante (77)
    nel primo membro: 50, nel secondo membro: 62 63 68 69
comunitarioConnettivo (78)
    nel primo membro: 51 52 53, nel secondo membro: 50 58
comunitarioOrgano (79)
    nel primo membro: 54 55 56 57, nel secondo membro: 50 58
comunitarioEmananteAltri (80)
    nel primo membro: 58 59, nel secondo membro: 50 58
comunitarioAltri (81)
    nel primo membro: 60 61, nel secondo membro: 58
comunitarioDirettiva (82)
    nel primo membro: 62 63, nel secondo membro: 46
comunitarioDenominazione (83)
    nel primo membro: 64 65, nel secondo membro: 62 63 68 69 70
comunitarioEstremi (84)
    nel primo membro: 66 67, nel secondo membro: 62 63 68 69 70
comunitarioDecisione (85)
    nel primo membro: 68 69, nel secondo membro: 47
comunitarioRegolamento (86)
    nel primo membro: 70, nel secondo membro: 48
suddivisioneOpz (87)
    nel primo membro: 71 72, nel secondo membro: 10 40 45
suddivisione (88)
    nel primo membro: 73, nel secondo membro: 9 71
suddivisioni (89)
    nel primo membro: 74 75, nel secondo membro: 73
connettivoAtto (90)
    nel primo membro: 76 77 78 79 80, nel secondo membro: 73 81
suddivisioneConnettivo (91)
    nel primo membro: 81, nel secondo membro: 97 98 99 100 101 102
    103 104 105 106 107 108 109
suddivisionePartizioneSupArtOpz (92)
    nel primo membro: 82 83, nel secondo membro: 97 98 99 100 101
suddivisionePartizioneSupArt (93)
    nel primo membro: 84 85 86 87 88, nel secondo membro: 74 82
suddivisionePartizioneInfArtOpz (94)
    nel primo membro: 89 90, nel secondo membro: 102 103 104 105 106
    107 108 109
suddivisionePartizioneInfArt (95)
    nel primo membro: 91 92 93 94 95 96, nel secondo membro: 89
suddivisioneLibro (96)
    nel primo membro: 97, nel secondo membro: 84
suddivisioneParte (97)
    nel primo membro: 98, nel secondo membro: 85
suddivisioneTitolo (98)
    nel primo membro: 99, nel secondo membro: 86
suddivisioneCapo (99)
    nel primo membro: 100, nel secondo membro: 87
suddivisioneSezione (100)
    nel primo membro: 101, nel secondo membro: 88
suddivisioneArticolo (101)
    nel primo membro: 102 103, nel secondo membro: 75
suddivisioneComma (102)
    nel primo membro: 104, nel secondo membro: 91
suddivisioneCapoverso (103)
    nel primo membro: 105, nel secondo membro: 92
suddivisioneLettera (104)
    nel primo membro: 106, nel secondo membro: 93
suddivisioneNumero (105)
    nel primo membro: 107, nel secondo membro: 94
suddivisioneParagrafo (106)
    nel primo membro: 108, nel secondo membro: 96
suddivisionePeriodo (107)
    nel primo membro: 109, nel secondo membro: 95
estremi (108)
    nel primo membro: 110, nel secondo membro: 10 67
estremiTipo (109)
    nel primo membro: 111 112, nel secondo membro: 110
estremiEstesi (110)
    nel primo membro: 113 114 115, nel secondo membro: 111
estremiAbbreviati (111)
    nel primo membro: 116 117 118, nel secondo membro: 112
estremiNumero (112)
    nel primo membro: 119 120, nel secondo membro: 113 114 116 117
estremiConnettivo (113)
    nel primo membro: 121 122 123 124, nel secondo membro: 45 110 114
    117
dataOpz (114)
    nel primo membro: 125 126, nel secondo membro: 45
data (115)
    nel primo membro: 127, nel secondo membro: 113 114 115 125
dataTipo (116)
    nel primo membro: 128, nel secondo membro: 127


stato 0

    0 $accept: . documento $end

    error  shift e prosecuzione allo stato 1

    documento  prosecuzione allo stato 2


stato 1

    2 documento: error .

    $default  riduzione con la regola 2 (documento)


stato 2

    0 $accept: documento . $end
    1 documento: documento . blocco

    $end       shift e prosecuzione allo stato 3
    LIBRO      shift e prosecuzione allo stato 4
    PARTE      shift e prosecuzione allo stato 5
    TITOLO     shift e prosecuzione allo stato 6
    CAPO       shift e prosecuzione allo stato 7
    SEZIONE    shift e prosecuzione allo stato 8
    ARTICOLO   shift e prosecuzione allo stato 9
    COMMA      shift e prosecuzione allo stato 10
    CAPOVERSO  shift e prosecuzione allo stato 11
    LETTERA    shift e prosecuzione allo stato 12
    NUMERO     shift e prosecuzione allo stato 13
    PARAGRAFO  shift e prosecuzione allo stato 14
    PERIODO    shift e prosecuzione allo stato 15
    BREAK      shift e prosecuzione allo stato 16

    ARTICOLO  [riduzione con la regola 90 (suddivisionePartizioneInfArtOpz)]
    CITATO    riduzione con la regola 90 (suddivisionePartizioneInfArtOpz)
    DEL       riduzione con la regola 90 (suddivisionePartizioneInfArtOpz)
    DELL      riduzione con la regola 90 (suddivisionePartizioneInfArtOpz)
    DELLA     riduzione con la regola 90 (suddivisionePartizioneInfArtOpz)
    $default  riduzione con la regola 72 (suddivisioneOpz)

    blocco                           prosecuzione allo stato 17
    riferimento                      prosecuzione allo stato 18
    costituzione                     prosecuzione allo stato 19
    normativo                        prosecuzione allo stato 20
    codice                           prosecuzione allo stato 21
    comunitario                      prosecuzione allo stato 22
    suddivisioneOpz                  prosecuzione allo stato 23
    suddivisione                     prosecuzione allo stato 24
    suddivisioni                     prosecuzione allo stato 25
    suddivisionePartizioneSupArt     prosecuzione allo stato 26
    suddivisionePartizioneInfArtOpz  prosecuzione allo stato 27
    suddivisionePartizioneInfArt     prosecuzione allo stato 28
    suddivisioneLibro                prosecuzione allo stato 29
    suddivisioneParte                prosecuzione allo stato 30
    suddivisioneTitolo               prosecuzione allo stato 31
    suddivisioneCapo                 prosecuzione allo stato 32
    suddivisioneSezione              prosecuzione allo stato 33
    suddivisioneArticolo             prosecuzione allo stato 34
    suddivisioneComma                prosecuzione allo stato 35
    suddivisioneCapoverso            prosecuzione allo stato 36
    suddivisioneLettera              prosecuzione allo stato 37
    suddivisioneNumero               prosecuzione allo stato 38
    suddivisioneParagrafo            prosecuzione allo stato 39
    suddivisionePeriodo              prosecuzione allo stato 40


stato 3

    0 $accept: documento $end .

    $default  accetta


stato 4

   97 suddivisioneLibro: LIBRO . suddivisioneConnettivo suddivisionePartizioneSupArtOpz

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    CITATO    [riduzione con la regola 80 (connettivoAtto)]
    DEL       [riduzione con la regola 80 (connettivoAtto)]
    DELL      [riduzione con la regola 80 (connettivoAtto)]
    DELLA     [riduzione con la regola 80 (connettivoAtto)]
    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto          prosecuzione allo stato 45
    suddivisioneConnettivo  prosecuzione allo stato 46


stato 5

   98 suddivisioneParte: PARTE . suddivisioneConnettivo suddivisionePartizioneSupArtOpz

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    CITATO    [riduzione con la regola 80 (connettivoAtto)]
    DEL       [riduzione con la regola 80 (connettivoAtto)]
    DELL      [riduzione con la regola 80 (connettivoAtto)]
    DELLA     [riduzione con la regola 80 (connettivoAtto)]
    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto          prosecuzione allo stato 45
    suddivisioneConnettivo  prosecuzione allo stato 47


stato 6

   99 suddivisioneTitolo: TITOLO . suddivisioneConnettivo suddivisionePartizioneSupArtOpz

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    CITATO    [riduzione con la regola 80 (connettivoAtto)]
    DEL       [riduzione con la regola 80 (connettivoAtto)]
    DELL      [riduzione con la regola 80 (connettivoAtto)]
    DELLA     [riduzione con la regola 80 (connettivoAtto)]
    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto          prosecuzione allo stato 45
    suddivisioneConnettivo  prosecuzione allo stato 48


stato 7

  100 suddivisioneCapo: CAPO . suddivisioneConnettivo suddivisionePartizioneSupArtOpz

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    CITATO    [riduzione con la regola 80 (connettivoAtto)]
    DEL       [riduzione con la regola 80 (connettivoAtto)]
    DELL      [riduzione con la regola 80 (connettivoAtto)]
    DELLA     [riduzione con la regola 80 (connettivoAtto)]
    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto          prosecuzione allo stato 45
    suddivisioneConnettivo  prosecuzione allo stato 49


stato 8

  101 suddivisioneSezione: SEZIONE . suddivisioneConnettivo suddivisionePartizioneSupArtOpz

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    CITATO    [riduzione con la regola 80 (connettivoAtto)]
    DEL       [riduzione con la regola 80 (connettivoAtto)]
    DELL      [riduzione con la regola 80 (connettivoAtto)]
    DELLA     [riduzione con la regola 80 (connettivoAtto)]
    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto          prosecuzione allo stato 45
    suddivisioneConnettivo  prosecuzione allo stato 50


stato 9

  102 suddivisioneArticolo: ARTICOLO . suddivisioneConnettivo suddivisionePartizioneInfArtOpz

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    CITATO    [riduzione con la regola 80 (connettivoAtto)]
    DEL       [riduzione con la regola 80 (connettivoAtto)]
    DELL      [riduzione con la regola 80 (connettivoAtto)]
    DELLA     [riduzione con la regola 80 (connettivoAtto)]
    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto          prosecuzione allo stato 45
    suddivisioneConnettivo  prosecuzione allo stato 51


stato 10

  104 suddivisioneComma: COMMA . suddivisioneConnettivo suddivisionePartizioneInfArtOpz

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    CITATO    [riduzione con la regola 80 (connettivoAtto)]
    DEL       [riduzione con la regola 80 (connettivoAtto)]
    DELL      [riduzione con la regola 80 (connettivoAtto)]
    DELLA     [riduzione con la regola 80 (connettivoAtto)]
    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto          prosecuzione allo stato 45
    suddivisioneConnettivo  prosecuzione allo stato 52


stato 11

  105 suddivisioneCapoverso: CAPOVERSO . suddivisioneConnettivo suddivisionePartizioneInfArtOpz

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    CITATO    [riduzione con la regola 80 (connettivoAtto)]
    DEL       [riduzione con la regola 80 (connettivoAtto)]
    DELL      [riduzione con la regola 80 (connettivoAtto)]
    DELLA     [riduzione con la regola 80 (connettivoAtto)]
    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto          prosecuzione allo stato 45
    suddivisioneConnettivo  prosecuzione allo stato 53


stato 12

  106 suddivisioneLettera: LETTERA . suddivisioneConnettivo suddivisionePartizioneInfArtOpz

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    CITATO    [riduzione con la regola 80 (connettivoAtto)]
    DEL       [riduzione con la regola 80 (connettivoAtto)]
    DELL      [riduzione con la regola 80 (connettivoAtto)]
    DELLA     [riduzione con la regola 80 (connettivoAtto)]
    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto          prosecuzione allo stato 45
    suddivisioneConnettivo  prosecuzione allo stato 54


stato 13

  107 suddivisioneNumero: NUMERO . suddivisioneConnettivo suddivisionePartizioneInfArtOpz

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    CITATO    [riduzione con la regola 80 (connettivoAtto)]
    DEL       [riduzione con la regola 80 (connettivoAtto)]
    DELL      [riduzione con la regola 80 (connettivoAtto)]
    DELLA     [riduzione con la regola 80 (connettivoAtto)]
    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto          prosecuzione allo stato 45
    suddivisioneConnettivo  prosecuzione allo stato 55


stato 14

  108 suddivisioneParagrafo: PARAGRAFO . suddivisioneConnettivo suddivisionePartizioneInfArtOpz

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    CITATO    [riduzione con la regola 80 (connettivoAtto)]
    DEL       [riduzione con la regola 80 (connettivoAtto)]
    DELL      [riduzione con la regola 80 (connettivoAtto)]
    DELLA     [riduzione con la regola 80 (connettivoAtto)]
    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto          prosecuzione allo stato 45
    suddivisioneConnettivo  prosecuzione allo stato 56


stato 15

  109 suddivisionePeriodo: PERIODO . suddivisioneConnettivo suddivisionePartizioneInfArtOpz

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    CITATO    [riduzione con la regola 80 (connettivoAtto)]
    DEL       [riduzione con la regola 80 (connettivoAtto)]
    DELL      [riduzione con la regola 80 (connettivoAtto)]
    DELLA     [riduzione con la regola 80 (connettivoAtto)]
    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto          prosecuzione allo stato 45
    suddivisioneConnettivo  prosecuzione allo stato 57


stato 16

    4 blocco: BREAK .

    $default  riduzione con la regola 4 (blocco)


stato 17

    1 documento: documento blocco .

    $default  riduzione con la regola 1 (documento)


stato 18

    3 blocco: riferimento .

    $default  riduzione con la regola 3 (blocco)


stato 19

    6 riferimento: costituzione .

    $default  riduzione con la regola 6 (riferimento)


stato 20

    5 riferimento: normativo .

    $default  riduzione con la regola 5 (riferimento)


stato 21

    7 riferimento: codice .

    $default  riduzione con la regola 7 (riferimento)


stato 22

    8 riferimento: comunitario .

    $default  riduzione con la regola 8 (riferimento)


stato 23

   10 normativo: suddivisioneOpz . normativoTipo estremi
   40 codice: suddivisioneOpz . codiceTipo
   45 comunitario: suddivisioneOpz . comunitarioTipo estremiConnettivo dataOpz

    DECRETO_PRESIDENTE_REPUBBLICA            shift e prosecuzione allo stato 58
    DECRETO_PRESIDENTE_CONSIGLIO_MINISTRI    shift e prosecuzione allo stato 59
    DIRETTIVA_PRESIDENTE_CONSIGLIO_MINISTRI  shift e prosecuzione allo stato 60
    ORDINANZA_PRESIDENTE_CONSIGLIO_MINISTRI  shift e prosecuzione allo stato 61
    LEGGE_COSTITUZIONALE                     shift e prosecuzione allo stato 62
    LEGGE                                    shift e prosecuzione allo stato 63
    DECRETO_LEGGE                            shift e prosecuzione allo stato 64
    DECRETO_LEGISLATIVO                      shift e prosecuzione allo stato 65
    REGIO_DECRETO                            shift e prosecuzione allo stato 66
    REGIO_DECRETO_LEGGE                      shift e prosecuzione allo stato 67
    REGIO_DECRETO_LEGISLATIVO                shift e prosecuzione allo stato 68
    CODICE_CIVILE                            shift e prosecuzione allo stato 69
    CODICE_PROCEDURA_CIVILE                  shift e prosecuzione allo stato 70
    CODICE_PENALE                            shift e prosecuzione allo stato 71
    CODICE_PROCEDURA_PENALE                  shift e prosecuzione allo stato 72
    LEGGE_REGIONALE                          shift e prosecuzione allo stato 73
    REGOLAMENTO_REGIONALE                    shift e prosecuzione allo stato 74
    DIRETTIVA                                shift e prosecuzione allo stato 75
    DECISIONE                                shift e prosecuzione allo stato 76
    REGOLAMENTO                              shift e prosecuzione allo stato 77

    normativoTipo                         prosecuzione allo stato 78
    decretoPresidenteRepubblica           prosecuzione allo stato 79
    decretoPresidenteConsiglioMinistri    prosecuzione allo stato 80
    direttivaPresidenteConsiglioMinistri  prosecuzione allo stato 81
    ordinanzaPresidenteConsiglioMinistri  prosecuzione allo stato 82
    leggeOrdinaria                        prosecuzione allo stato 83
    regio                                 prosecuzione allo stato 84
    regionale                             prosecuzione allo stato 85
    regionaleTipo                         prosecuzione allo stato 86
    codiceTipo                            prosecuzione allo stato 87
    comunitarioTipo                       prosecuzione allo stato 88
    comunitarioDirettiva                  prosecuzione allo stato 89
    comunitarioDecisione                  prosecuzione allo stato 90
    comunitarioRegolamento                prosecuzione allo stato 91


stato 24

    9 costituzione: suddivisione . COSTITUZIONE
   71 suddivisioneOpz: suddivisione .

    COSTITUZIONE  shift e prosecuzione allo stato 92

    $default  riduzione con la regola 71 (suddivisioneOpz)


stato 25

   73 suddivisione: suddivisioni . connettivoAtto

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto  prosecuzione allo stato 93


stato 26

   74 suddivisioni: suddivisionePartizioneSupArt .

    $default  riduzione con la regola 74 (suddivisioni)


stato 27

  103 suddivisioneArticolo: suddivisionePartizioneInfArtOpz . suddivisioneConnettivo ARTICOLO

    CITATO  shift e prosecuzione allo stato 41
    DEL     shift e prosecuzione allo stato 42
    DELL    shift e prosecuzione allo stato 43
    DELLA   shift e prosecuzione allo stato 44

    $default  riduzione con la regola 80 (connettivoAtto)

    connettivoAtto          prosecuzione allo stato 45
    suddivisioneConnettivo  prosecuzione allo stato 94


stato 28

   89 suddivisionePartizioneInfArtOpz: suddivisionePartizioneInfArt .

    $default  riduzione con la regola 89 (suddivisionePartizioneInfArtOpz)


stato 29

   84 suddivisionePartizioneSupArt: suddivisioneLibro .

    $default  riduzione con la regola 84 (suddivisionePartizioneSupArt)


stato 30

   85 suddivisionePartizioneSupArt: suddivisioneParte .

    $default  riduzione con la regola 85 (suddivisionePartizioneSupArt)


stato 31

   86 suddivisionePartizioneSupArt: suddivisioneTitolo .

    $default  riduzione con la regola 86 (suddivisionePartizioneSupArt)


stato 32

   87 suddivisionePartizioneSupArt: suddivisioneCapo .

    $default  riduzione con la regola 87 (suddivisionePartizioneSupArt)


stato 33

   88 suddivisionePartizioneSupArt: suddivisioneSezione .

    $default  riduzione con la regola 88 (suddivisionePartizioneSupArt)


stato 34

   75 suddivisioni: suddivisioneArticolo .

    $default  riduzione con la regola 75 (suddivisioni)


stato 35

   91 suddivisionePartizioneInfArt: suddivisioneComma .

    $default  riduzione con la regola 91 (suddivisionePartizioneInfArt)


stato 36

   92 suddivisionePartizioneInfArt: suddivisioneCapoverso .

    $default  riduzione con la regola 92 (suddivisionePartizioneInfArt)


stato 37

   93 suddivisionePartizioneInfArt: suddivisioneLettera .

    $default  riduzione con la regola 93 (suddivisionePartizioneInfArt)


stato 38

   94 suddivisionePartizioneInfArt: suddivisioneNumero .

    $default  riduzione con la regola 94 (suddivisionePartizioneInfArt)


stato 39

   96 suddivisionePartizioneInfArt: suddivisioneParagrafo .
